syntax = "proto3";
package centerMsg;

import "errorNo.proto";
import "cliAllEnum.proto";

message ItemReq{
	uint32 item_id = 1;
	uint32 item_num = 2;
}

message HeroInfo {
	uint32 ItemCfgID = 1;
	uint32 Stars = 2;
	string GodWeaponUID = 3;//神器
	cliAllEnum.HeroQuality HeroQuality = 4;//英雄品质 可变化
	map<uint32,uint32> SkillLv = 5;//技能等级 key:enum SkillType
	uint32 Time = 6;//获得的时间(秒)
	repeated uint32 FetterList = 7;//点亮的羁绊
	bool UseWanNengChip = 12;//使用万能碎片
	uint32 AwakeLevel = 13;//幻灵觉醒等级 add by tn 20211210
	
	uint32 KTTabIndex = 16; //使用开天牌页的哪一个栏目
	uint32 BloodPower =17;//血脉之力
	uint32 SkinCfgID = 18;//皮肤配置ID
}


message ItemInfo{
	string UID = 1;
	uint32 ItemCfgID = 2;
	uint32 Num = 3;
}

message GemInfo{
	string UID = 1;
	uint32 ItemCfgID = 2;
	uint32 Num = 3;
	bool IsEquip = 4;
}

message EquipmentInfo{
	uint32 ItemCfgID = 1;
	bool Lock = 2;
	uint32 Num = 3;
	bool Equip = 5;
	string UID = 6;
	uint32 Timestamp = 7;//获得的时间(秒)
}

message MailSenderViewInfo
{
	 string PlayerID = 1;
	 string PlayerName = 2;
}

//存储数据库的结构
message MailViewData
{
    string MailUID = 1;// 邮件ID
    cliAllEnum.MailTarget MailTarget = 2;// 邮件类型(全服还是个人)
	cliAllEnum.MailType MailType = 3;
    string MailTitle = 4;// 邮件标题 如果是邮件模板这些字段都是空
    string MailContent = 5;// 邮件内容 如果是邮件模板这些字段都是空
    repeated ItemReq MailItem = 6;// 邮件附件 如果是邮件模板这些字段都是空
	map<string,string> MailPara = 7;//扩展参数
    uint32 CreateTs = 9;// 创建时间(s)
	uint32 ExpireTs = 10;//邮件过期时间(s)
    string PlayerID = 11;//归属人
	cliAllEnum.MailStatus MailStatus = 12;
	uint32 MailCfgID = 13;//模板配置ID 说明内容读配置表
	MailSenderViewInfo MailSenderInfo = 14;
	uint32 StartTs = 15;// 有效的开始时间(s)
}

message PlayerDisplayInfo
{
    string AccountId = 1;
    string PlayerId = 2;
    string PlayerName = 3;
    int64 LastLoginTime = 4;
	map<string,uint32> PlayerAttr = 5;
	string PlayerHeadIcon = 28;//玩家头像
	string GuildID = 30; // 公会ID
	map<uint32,DayTimesInfo> DayTimesInfo = 31;//定时更新的系统 key 为DatTimesType
	uint32 MainPlayerID= 36;//主角ID
}


//好友信息
message GoodFriendInfo{
	string PlayerID = 1;
	string PlayerName = 2;
	string PlayerHeadIcon = 3;
	uint32 PlayerVipLv = 4;
	uint32 PlayerLevel = 5;
	uint32 IntimacyValue = 6;//羁绊(好友度)
	uint32 Time = 10;//加入的时间
	bool IsOnline = 12;//是否在线
	uint32 SanXiaoAbilityVal = 13;//三消能力值
	string ChatRoomID = 14;//聊天室ID 用于查看聊天记录
	uint32 MainPlayerCfgID = 15;//主角ID
	uint32 LastChatTS = 16;//最后一次聊天的时间
	bool RedPoint = 17;//小红点
	uint32 JiBanLv = 18;//羁绊等级
	uint32 JiBanLvExp = 19;//羁绊经验值
	string GuildID = 20;
	string GuildName = 21;
	cliAllEnum.FactionType FactionType = 22; // 阵营类型
	uint32 MainPlayerSkinCfgID = 23;//主角皮肤配置ID
	uint64 FightPower = 24;
	uint32 OfflineTime = 25;
	uint32 HelpDaiXiaoCount = 26;
	uint32 HeadIconFrame = 27;//头像框
}

message ApplyFriendInfo{
	string PlayerID = 1;
	string PlayerName = 2;
	string PlayerHeadIcon = 3;
	uint32 PlayerVipLv = 4;
	uint32 PlayerLevel = 5;
	uint32 HeadIconFrame = 6;//头像框

	bool IsOnline = 12;//是否在线
	uint32 MainPlayerCfgID = 15;//主角ID
	uint32 MainPlayerSkinCfgID = 16;//主角皮肤配置ID
	uint64 FightPower = 17;
}

message CreatedPlayer
{
    string PlayerId = 3;
    string PlayerName = 4;
    int64 CreateTime = 6;
    int64 BlockUntilTime = 7;
}

message DayTimesInfo
{
	uint32 LastUpdateTs = 1;
	uint32 NextUpdateTs = 2;
	uint32 CurCount = 3;
	uint32 MaxCount = 4;
}

message G2C_SyncDayTimesInfoRes{
	map<uint32,DayTimesInfo> DayTimesInfo = 1;//定时更新的系统 key 为DatTimesType
    errorNo.ErrorNo Err  = 2;
}


message C2G_Login {
    string AccountId = 1;
    string PassWd = 2;
	string Token = 3;
}

message G2C_Login {
    string AccountId = 1;
	string LoginKey = 2;
    repeated CreatedPlayer CreatedPlayer = 3;
    errorNo.ErrorNo Err = 4;
	int64 SrvTime=5;
	string PlatAccountID = 7;//平台账号ID
}

message C2G_CreatePlayer {
	string AccountId = 1;
    string PlayerName = 2;
	string PlayerIcon = 3;//头像
    uint32 MainPlayerID = 4;//主角ID  对应主角配置表
}

message G2C_CreatePlayer {
    string PlayerId = 1;
	string PlayerName = 2;
	errorNo.ErrorNo Err = 3;
}


message C2G_PlayerLogin
{
    string PlayerId = 1;
    string AccountId = 2;
	string LoginKey = 3;
	map<string,string> Device=4;//玩家设备信息 统计使用
}


message G2C_PlayerLogin
{
    errorNo.ErrorNo Err  = 3;
}

//离线通知
message G2C_OfflineNTfRes
{
	errorNo.ErrorNo Err = 1;
}


message C2G_ReconnectReq{
	string AccountID = 1;
	string PlayerID = 2;
	uint32 LastDownStreamID = 3;
}

message G2C_ReconnectRes{
	string AccountID = 1;
	string PlayerID = 2;
	uint32 SrvTimeTs = 4;//秒
	uint32 LastCliMsgStreamID = 5; //最后一次收到客户端消息包流
    errorNo.ErrorNo Err  = 6;
}


message G2C_SyncPlayerDisplayInfo
{
    errorNo.ErrorNo Err = 1;
    PlayerDisplayInfo PlayerInfo = 2;
	uint32 SrvTimeTs = 3;//秒
	uint32 StartSrvTimeTs = 4;//开服时间秒
}

message C2G_HeartBeat {
}

message G2C_HeartBeat {
	uint32 SrvTimeTs = 1;//秒
}

message G2C_PlayerDataSyncFinish
{
	errorNo.ErrorNo Err = 2;
}

message G2C_PlayerDataReconnectSyncFinish
{
	errorNo.ErrorNo Err = 1;
}

//获取背包信息
message G2C_GetBagInfoRes {
	map<string,ItemInfo> PropList = 1;//道具背包
	map<string,ItemInfo> MaterialList = 2;//材料背包
	map<string,ItemInfo> GemList = 3;//宝石背包
	map<string,EquipmentInfo>  EquipmentList = 4;//装备背包
	map<uint32,uint32> HeroChipList = 5;//英雄碎片 key:Chip ItemID
	map<string,bool> UpdateBagInfoFlag = 8;//需要更新的 脏标记
}


//好友系统找寻玩家信息 通过玩家名称
message C2G_FindFriendReq
{
	string PlayerNameOrID = 1;
}

message G2C_FindFriendRes
{
	repeated ApplyFriendInfo ApplyFriendInfoList = 1;
	errorNo.ErrorNo Err = 6;
}

message C2G_ApplyForFriendReq
{
	repeated string PlayerIDList = 1;
}

message G2C_ApplyForFriendRes
{
	errorNo.ErrorNo Err = 2;
}

message C2G_AgreeFriendReq
{
	string PlayerID = 1;
	bool IsAll = 2;
}

message G2C_AgreeFriendRes
{
	errorNo.ErrorNo Err = 1;
}

message C2G_DisagreeFriendReq
{
	string PlayerID = 1;
	bool IsAll = 2;
}

message G2C_DisagreeFriendRes
{
	errorNo.ErrorNo Err = 1;
}


message C2G_BlockFriendReq
{
	string PlayerID = 1;
}

message G2C_BlockFriendRes
{
	errorNo.ErrorNo Err = 1;
}

message C2G_RecommendFriendReq
{
}

message C2G_DeleteFriendReq
{
	string PlayerID = 1;
}

message G2C_DeleteFriendRes
{
	errorNo.ErrorNo Err = 1;
}

message G2C_RecommendFriendRes
{
	repeated ApplyFriendInfo  FriendList = 1;
	errorNo.ErrorNo Err = 2;
}

//玩家聊天消息请求
message C2G_ChatMsgReq
{
	cliAllEnum.ChannelType ChannelType=1;
	string PlayerID = 2; 
	string ChatMsg =3;
	string RecievePlayerID =4;//指定玩家聊天时需要携带
	cliAllEnum.ChatType ChatType=5;
	string Data = 6;//扩展信息
}

//玩家聊天消息请求恢复 成功或者失败
message G2C_ChatMsgRes
{
	errorNo.ErrorNo Err = 1;//被禁言或者字数超过限制会返回失败
}

//聊天消息通知 服务器转发或者发起 (玩家信息都是发送者的信息)
message G2C_ChatMsgNotice
{
	cliAllEnum.ChannelType ChannelType = 1;
	cliAllEnum.ChatType ChatType = 2;
	string ChatMsg = 3;
	string PlayerID = 4; //发送者PlayerID
	string PlayerName = 5;
	uint32 PlayerLv = 6;
	string PlayerHeadIcon = 7;
	uint32 HeadIconFrame = 8;//头像框
	uint32 MainPlayerCfgID = 10;//主角ID
	uint32 Time = 11;//消息的时间(秒)
	string ChatRoomID = 12;//房间号ID
	string Data = 13;//扩展信息
	bool IngnoreBrief=14; //不在缩略框中显示
	cliAllEnum.FactionType FactionType=15;//阵营信息
	uint32 PlayerTitle=16;//玩家称号
}




message C2G_GMRequest {
	string cmd = 1;
	repeated string para = 2;
}

message G2C_GMResponse {
	string cmd = 1;
	errorNo.ErrorNo Err  = 2;
	
}